--- a/1.md
+++ b/1.md
@@ -1,27 +1,30 @@
 ## コールバックの実装方法
-
-
+コールバックとは、オブジェクトのライフサイクルの特定の瞬間に呼び出されるメソッドのことです。コールバックを利用すれば、`Active Record`オブジェクトが作成、保存、更新、削除された時などの任意のタイミングで、常にその処理が実行されるようにコードを書くことができます。
 
 ### Railsアプリの用意
 
-`callback_app`という名前で新しくrailsアプリを作成してください。
+まずは、今回の項目で使うアプリの準備です。  
+アプリ名を`callback_app`として立ち上げ、Userモデルをscaffoldで作成しましょう。  
+その時、以下の2つのカラムを追加してください。
 
-`name`と`age`の要素を持ったUserモデルをscaffoldで作成します。
+* `name (string型)`
+* `age (integer型)`
 
+`実行例`
 ```
+rails new callback_app -d postgresql
 rails generate scaffold user name:string age:integer
+rails db:create
 rails db:migrate
 ```
 
 ### コールバックの実装
-
+さっそくコールバックの定義方法について学んでいきましょう。  
 コールバックの定義にはいくつか方法があります。
-実際に実装しながら順番に見ていきましょう。
 
-まずはプライベートメソッドを定義して、呼び出す方法です。
-nameの値に何も設定されてない場合、初期値(Taro)を保管するメソッドを作成して、作成の直前に呼び出すように設定します。
-
-それでは、name値を保管するプライベートメソッドを作成します。
+#### プライベートメソッドを定義して呼び出す方法
+例として、nameカラムに初期値を持たせる処理を書いてみましょう。  
+nameの値に何も設定せず`create`した場合、初期値として`Taro`を保管するメソッドを作成します。
 
 `app/models/user.rb`
 
@@ -35,10 +38,9 @@ class User < ActiveRecord::Base
 end
 ```
 
-そして先ほど作成したメソッドを作成の直前(before_create)のコールバックとして登録します。
+このメソッドを作成の直前にコールバックされるよう、登録します。
 
 `app/models/user.rb`
-
 ```rb
 class User < ActiveRecord::Base
   before_create :ensure_has_name
@@ -50,7 +52,8 @@ class User < ActiveRecord::Base
 end
 ```
 
-実際に検証してみましょう
+コールバック処理の設定は以上で完了です。
+早速処理を確認してみましょう。
 
 ```
 $ rails c
@@ -61,36 +64,34 @@ $ rails c
  => #<User id: 1, name: "Taro", age: nil, created_at: "2017-08-20 09:31:27", updated_at: "2017-08-20 09:31:27">
 ```
 
-nameの値は指定してないがnameが`Taro`という値で保存されているのがわかると思います。
+nameの値には何も指定していませんが、コールバック処理が動いたことで`Taro`という値が入って保存されています。
 
-### ブロック形式で定義する
+#### ブロック形式で定義する方法
+コールバックメソッドはブロック形式で定義することもできます。
+この形式では、引数としてコールバックの種類によって任意の値を受け取ることができます。
 
-コールバックメソッドはブロック形式で定義することができます。
-ブロック形式の場合、引数として関連する値を受け取ることができます。
-値はコールバックの種類によって変わってきます。
-
-今回はafter_initializeコールバックを使用してみましょう。
-after_initializeは、Active Recordのオブジェクトがインスタンス化されるたびに呼び出されます。
+今回は`after_initialize`コールバックを使用してみましょう。
+`after_initialize`は、`Active Record`オブジェクトがインスタンス化されるたびに呼び出されるコールバックです。
 
 `app/models/user.rb`
 
-```
+```rb
 class User < ActiveRecord::Base
   before_create :ensure_has_name
 
   after_initialize do |user|
     puts "オブジェクトを生成しました！"
   end
-// 省略
+# 省略
 ```
 
-実際にUserモデルのインスタンスを生成してみましょう！
+実際にUserモデルのインスタンスを生成してみましょう。
 
 ```
 $ rails c
 > User.new
-after_initializeを呼び出しました
+オブジェクトを生成しました！
  => #<User id: nil, name: nil, age: nil, created_at: nil, updated_at: nil>
 ```
 
-after_initializeコールバックが呼び出されているのが、確認できると思います。
+after_initializeコールバックが呼び出されているのが確認できると思います。
